--- a/src/styles.css
+++ b/src/styles.css
@@ -15158,7 +15158,23 @@ background: none repeat scroll 0% 0% rgba(51, 51, 51, 1);
     opacity: 0.5; /* Make non-active step labels appear disabled */
     cursor: not-allowed; /* Change the cursor to indicate non-clickable */
 }
- /* End Resume Form */
+
+.text-required-field span{
+    font-size: 1.2em;
+    font-weight: 900;
+    position: relative;
+    top: 5px;
+}
+
+.text-required-field {
+	font-family: Raleway, Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: 1.2em;
+
+}
+.text-red {
+    color: #f44336 !important;
+	transform: scale(1.4);
+}
 
  .mat-step-header > .mat-step-icon-selected {
     background-color: #0264aa !important;
@@ -15168,4 +15184,16 @@ background: none repeat scroll 0% 0% rgba(51, 51, 51, 1);
     background-color: white !important;
 }
 
+.mat-mdc-form-field.required > .mat-mdc-text-field-wrapper:before {
+    content: "*";
+    transform: scale(1.4);
+    color: red;
+    opacity: .65;
+    position: absolute;
+    top: 12px;
+    left: 5px;
+    font-weight: 900;
+}
 
+
+ /* End Resume Form */
