mat datepicker issue

--- a/src/app/shared/stepper-resume/stepper-resume.component.css
+++ b/src/app/shared/stepper-resume/stepper-resume.component.css
@@ -26,4 +26,7 @@
     display: block;
 }
 
-
+mat-datepicker {
+    /* Optionally add a slight transition effect */
+    transition: opacity 0.3s ease;
+  }
