--- a/src/styles.css
+++ b/src/styles.css
@@ -15195,5 +15195,8 @@ background: none repeat scroll 0% 0% rgba(51, 51, 51, 1);
     font-weight: 900;
 }
 
+.mdc-floating-label--required {
+    display: none;
+}
 
  /* End Resume Form */
